fix overflow issue on the homepage

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,13 +1,12 @@
 
-html, body {
-    max-width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    text-rendering: optimizeLegibility;
+html{
+ overflow-x: hidden;
 }
-
-body{
- padding-top:86px;
+body {
+    /*max-width: 100%;*/
+    height: 100%;
+    text-rendering: optimizeLegibility;
+    padding-top:86px;
 }
 
 .header{
@@ -17,7 +16,7 @@ body{
 	width: 100%;
 	/*border-bottom: 1px solid #e1e5e9;*/
 	position: fixed;
-	z-index: 1000;
+	z-index:999;
 	top:0;
 }
 
